src/assets/styles/tokens/_colors.scss
:root {
  //----------- default tokens -------------//

  --brand-900: #31531C;
  --brand-800: #416E26;
  --brand-700: #518A2F;
  --brand-600: #61A539;
  --brand-500: #72BF44;
  --brand-400: #80C557;
  --brand-300: #8ECC69;
  --brand-200: #9CD27C;
  --brand-100: #AAD98F;
  --brand-50: #B8DFA2;
  --brand-40: #CAE7B9;
  --brand-30: #DBEFD1;
  --brand-20: #EDF7E8;

  --green-900: #0B4627;
  --green-800: #0F5C33;
  --green-700: #147D46;
  --green-600: #199754;
  --green-500: #1FC16B;
  --green-400: #5ED495;
  --green-300: #83DFAE;
  --green-200: #AEEACB;
  --green-100: #D0F5E1;
  --green-50: #E0FAEC;
  --green-20: #E9F8DC;

  --blue-900: #2443B8;
  --blue-800: #2E63D6;
  --blue-700: #3475E8;
  --blue-600: #3C88F7;
  --blue-500: #4396F7;
  --blue-400: #54A6F8;
  --blue-300: #71B6F9;
  --blue-200: #9ACAFA;
  --blue-100: #C1DEFC;
  --blue-50: #E6F2FE;

  --purple-900: #081FA6;
  --purple-800: #0E2AB2;
  --purple-700: #2431B9;
  --purple-600: #3838C1;
  --purple-500: #453DC7;
  --purple-400: #6559D0;
  --purple-300: #8377D7;
  --purple-200: #A89DE2;
  --purple-100: #CBC4ED;
  --purple-50: #EAE7F7;
  --purple-20: #F5F3FB;

  --pink-900: #4A0A20;
  --pink-800: #79012F;
  --pink-700: #A2023F;
  --pink-600: #AD0244;
  --pink-500: #c9014f;
  --pink-400: #F50260;
  --pink-300: #FD2779;
  --pink-200: #FE7DAF;
  --pink-100: #FEA8C9;
  --pink-50: #FFD4E4;

  --red-900: #8B1822;
  --red-800: #AD1F2B;
  --red-700: #D02533;
  --red-600: #E93544;
  --red-500: #FB3748;
  --red-400: #FF6875;
  --red-300: #FF97A0;
  --red-200: #FFC0C5;
  --red-100: #FFD5D8;
  --red-50: #FFEBEC;
  --red-20: #FFF4F4;

  --yellow-900: #EB7520;
  --yellow-800: #ED912A;
  --yellow-700: #EEA02F;
  --yellow-600: #F0B134;
  --yellow-500: #F1BE39;
  --yellow-400: #f2c74a;
  --yellow-300: #F4D264;
  --yellow-200: #F7DE8E;
  --yellow-100: #FAEBB9;
  --yellow-50: #FDF7E4;

  --grey-900: #0E121B;
  --grey-800: #222530;
  --grey-700: #2B303B;
  --grey-600: #525866;
  --grey-500: #717784;
  --grey-400: #99A0AE;
  --grey-300: #CACFD8;
  --grey-200: #E1E4EA;
  --grey-100: #F2F5F8;
  --grey-50: #F5F7FA;
  --grey-40: #F4F5F4;
  --grey-30: #F7F8F7;
  --grey-20: #FAFAFA;
  --grey-0: #FFFFFF;

  --white: #FEFEFE;
}

[data-theme="dark"] {
  --brand-900: #EDF7E8;
  --brand-800: #DBEFD1;
  --brand-700: #CAE7B9;
  --brand-600: #B8DFA2;
  --brand-500: #AAD98F;
  --brand-400: #9CD27C;
  --brand-300: #8ECC69;
  --brand-200: #80C557;
  --brand-100: #72BF44;
  --brand-50: #61A539;
  --brand-40: #518A2F;
  --brand-30: #416E26;
  --brand-20: #31531C;

  --green-900: #0B4627;
  --green-800: #0F5C33;
  --green-700: #147D46;
  --green-600: #199754;
  --green-500: #1FC16B;
  --green-400: #5ED495;
  --green-300: #83DFAE;
  --green-200: #AEEACB;
  --green-100: #D0F5E1;
  --green-50: #E0FAEC;
  --green-20: #E9F8DC;

  --blue-900: #2443B8;
  --blue-800: #2E63D6;
  --blue-700: #3475E8;
  --blue-600: #3C88F7;
  --blue-500: #4396F7;
  --blue-400: #54A6F8;
  --blue-300: #71B6F9;
  --blue-200: #9ACAFA;
  --blue-100: #C1DEFC;
  --blue-50: #E6F2FE;

  --purple-900: #081FA6;
  --purple-800: #0E2AB2;
  --purple-700: #2431B9;
  --purple-600: #3838C1;
  --purple-500: #453DC7;
  --purple-400: #6559D0;
  --purple-300: #8377D7;
  --purple-200: #A89DE2;
  --purple-100: #CBC4ED;
  --purple-50: #EAE7F7;
  --purple-20: #F5F3FB;

  --pink-900: #4A0A20;
  --pink-800: #79012F;
  --pink-700: #A2023F;
  --pink-600: #AD0244;
  --pink-500: #93234e;
  --pink-400: #F50260;
  --pink-300: #FD2779;
  --pink-200: #FE7DAF;
  --pink-100: #FEA8C9;
  --pink-50: #FFD4E4;

  --red-900: #8B1822;
  --red-800: #AD1F2B;
  --red-700: #D02533;
  --red-600: #E93544;
  --red-500: #FB3748;
  --red-400: #FF6875;
  --red-300: #FF97A0;
  --red-200: #FFC0C5;
  --red-100: #FFD5D8;
  --red-50: #FFEBEC;
  --red-20: #FFF4F4;

  --yellow-900: #EB7520;
  --yellow-800: #ED912A;
  --yellow-700: #EEA02F;
  --yellow-600: #F0B134;
  --yellow-500: #F1BE39;
  --yellow-400: #f2c74a;
  --yellow-300: #F4D264;
  --yellow-200: #F7DE8E;
  --yellow-100: #FAEBB9;
  --yellow-50: #FDF7E4;

  --grey-900: #FEFEFE;
  --grey-800: #FFFFFF;
  --grey-700: #FAFAFA;
  --grey-600: #F7F8F7;
  --grey-500: #F4F5F4;
  --grey-400: #F5F7FA;
  --grey-300: #F2F5F8;
  --grey-200: #E1E4EA;
  --grey-100: #CACFD8;
  --grey-50: #99A0AE;
  --grey-40: #717784;
  --grey-30: #525866;
  --grey-20: #2B303B;
  --grey-0: #161e27;

  --white: #0E121B;
}

